<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="accounts_permission_required_denied">To be able to sync with Google Fit, allow Nautilus Trainer to access your accounts. Tap settings &gt; Permissions and turn Contacts on</string>
    <string name="accounts_permission_required_rationale">To be able to sync with Google Fit, allow Nautilus Trainer to access your accounts.</string>
    <string name="action_award_types">Types</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_devices">Devices</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_sync_now">Sync Now</string>
    <string name="action_users">Users</string>
    <string name="app_name">Nautilus Trainer</string>
    <string name="award_avg"> Avg</string>
    <string name="award_columns">3</string>
    <string name="award_date_format">MMM dd</string>
    <string name="award_detail_week_of">Week of </string>
    <string name="award_type_date_format">MMM dd, yyyy</string>
    <string name="award_type_full_date_format">MMMM dd, yyyy</string>
    <string name="awards">%1$d Awards</string>
    <string name="awards_best">Best</string>
    <string name="awards_cal"> Cal</string>
    <string name="awards_cal_avg"> Cal Avg</string>
    <string name="awards_calories_burned">Calories Burned</string>
    <string name="awards_calories_min">Cal/Min</string>
    <string name="awards_empty_circles_amount">15</string>
    <string name="awards_first">First</string>
    <string name="awards_interval">%1$d Min</string>
    <string name="awards_key">awards</string>
    <string name="awards_kilometers"> Km</string>
    <string name="awards_kilometers_per_hour"> KPH</string>
    <string name="awards_miles"> Miles</string>
    <string name="awards_miles_per_hour"> MPH</string>
    <string name="awards_most">Most</string>
    <string name="awards_resistance_level">Level </string>
    <string name="awards_three_or_more_times">%1$d times</string>
    <string name="awards_three_times">3+ Times</string>
    <string name="awards_times_label"> Times</string>
    <string name="best_workout_award_description">Best Workout:</string>
    <string name="best_workout_award_name">BEST WORKOUT</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_button">CANCEL</string>
    <string name="check_awards">Go and check them out</string>
    <string name="connect_with_under_armour_description">Connect with Under Armour Connected Fitness to share your workout data and track your calorie burn.</string>
    <string name="connection_back_navigation_not_allowed">Back is not allowed during pairing.</string>
    <string name="connection_be_near_your_omni_trainer">Be near your equipment (10 ft /3 m)</string>
    <string name="connection_btn_connect_now">Connect now</string>
    <string name="connection_closest_equipment">The closest Nautilus equipment is shown at the top of the list</string>
    <string name="connection_connect_now">Connect now</string>
    <string name="connection_connect_using_device_screen">You can finish pairing your Nautilus equipment from the Device screen.</string>
    <string name="connection_connect_with_your">Connect with your</string>
    <string name="connection_connecting_to_omni_trainer">Connecting to your Nautilus equipment...</string>
    <string name="connection_elliptical_title">Bike or Elliptical</string>
    <string name="connection_error_console_busy">There was an issue during the pairing process.</string>
    <string name="connection_error_console_not_responsive">There is an issue with your Nautilus equipment. Unplug and reconnect your Nautilus equipment power cord to reset it.</string>
    <string name="connection_error_console_not_responsive_restart_wizard">There is an issue with your Nautilus equipment. Unplug and reconnect your Nautilus equipment power cord to reset it. You will need to restart the pairing process.</string>
    <string name="connection_get_help">Get Connection Help</string>
    <string name="connection_is_omni_trainer_plugged">Is the Nautilus equipment plugged to a power source?</string>
    <string name="connection_list_select">Select your</string>
    <string name="connection_make_sure_no_one_is_using_omni_trainer">Make sure no one is using your equipment</string>
    <string name="connection_nautilus">Nautilus equipment</string>
    <string name="connection_no_new_workouts_found">Sync successful. No new workout records found.</string>
    <string name="connection_no_omni_trainer_found_1">No Nautilus</string>
    <string name="connection_no_omni_trainer_found_2">equipment found...</string>
    <string name="connection_omni_trainer_busy">Nautilus equipment is in use.</string>
    <string name="connection_omni_trainer_error">There was an issue connecting to your Nautilus equipment.</string>
    <string name="connection_omni_trainer_found">Your Nautilus equipment has been found. Connecting...</string>
    <string name="connection_omni_trainer_idle">Idle</string>
    <string name="connection_omni_trainer_in_use">In Use by User</string>
    <string name="connection_skip_text_view">Skip</string>
    <string name="connection_sync_data">Your User Number has been set to %1$d. Syncing your data...</string>
    <string name="connection_sync_failed">We were unable to connect and sync...</string>
    <string name="connection_sync_failed_by_busy_state">Console busy - unable to sync.</string>
    <string name="connection_sync_finished">That\'s it - you\'re all set and ready to start.</string>
    <string name="connection_t616_treadmill_title">T616 Treadmill</string>
    <string name="connection_t618_treadmill_title">T618 Treadmill</string>
    <string name="connection_t628_treadmill_title">T628 Treadmill</string>
    <string name="connection_try_again">Try again</string>
    <string name="connection_unable_to_connect_with_omni_trainer">Your Nautilus equipment unexpectedly disconnected. We need to restart the connection process.</string>
    <string name="connection_workouts_synchronized">Your workout records were successfully synchronized!</string>
    <string name="device_info_console_busy_state">Console busy</string>
    <string name="device_info_consumer_variant">Consumer Variant:</string>
    <string name="device_info_date_format">MMM dd, yyyy hh:mm aa</string>
    <string name="device_info_date_format24">MMM dd, yyyy HH:mm</string>
    <string name="device_info_failed_pairing">Failed</string>
    <string name="device_info_firmware_version">Firmware Version:</string>
    <string name="device_info_forget_device">Forget Device</string>
    <string name="google_fit_button_disconnect">Disconnect</string>
    <string name="google_fit_choose_data">Choose your Nautilus Trainer data to sync with Google Fit</string>
    <string name="google_fit_config_switch_average_heart_rate">Avg Heart Rate</string>
    <string name="google_fit_config_switch_average_rpm">Average RPM</string>
    <string name="google_fit_config_switch_calories_burned">Calories Burned</string>
    <string name="google_fit_config_switch_distance">Distance</string>
    <string name="google_fit_config_switch_workout_time">Workout Time</string>
    <string name="google_fit_error">Error</string>
    <string name="google_fit_sync_complete">Complete Sync</string>
    <string name="google_fit_sync_data">Sync data</string>
    <string name="mfp_description">Connect with MyFitnessPal to share your workout data and track your calorie burn.</string>
    <string name="mfp_is_connected">is connected</string>
    <string name="mfp_my_fitness_pal">MyFitnessPal</string>
    <string name="mfp_sync_with">Sync with</string>
    <string name="ok">OK</string>
    <string name="settings_btn_attributions">Attributions</string>
    <string name="settings_btn_eula">End User License Agreement</string>
    <string name="settings_btn_privacy_policy">Privacy Policy</string>
    <string name="settings_lbl_about">ABOUT</string>
    <string name="settings_lbl_btn_google_fit">Google Fit</string>
    <string name="settings_lbl_btn_my_fit_pal">MyFitnessPal</string>
    <string name="settings_lbl_google_fit_connected">is connected</string>
    <string name="settings_lbl_link_services">LINKED SERVICES</string>
    <string name="settings_lbl_settings_email_us">Send us an email</string>
    <string name="settings_lbl_settings_feedback_support">FEEDBACK AND SUPPORT</string>
    <string name="settings_lbl_units">UNITS</string>
    <string name="settings_lbl_version">Version</string>
    <string name="under_armour_settings_title">Under Armour</string>
</resources>