<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_user_number_1" android:id="@+id/action_users" android:visible="true" android:orderInCategory="1" android:title="@string/action_users" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_bluetooth_inactive" android:id="@+id/action_bluetooth" android:visible="true" android:orderInCategory="2" android:title="@string/action_bluetooth" app:showAsAction="always"/>
    <item android:id="@+id/action_settings" android:orderInCategory="4" android:title="@string/action_settings" app:showAsAction="never"/>
    <item android:id="@+id/action_devices" android:orderInCategory="5" android:title="@string/action_devices" app:showAsAction="never"/>
    <item android:id="@+id/action_awards_types" android:orderInCategory="7" android:title="@string/action_award_types" app:showAsAction="always"/>
    <item android:icon="@drawable/ic_share_active" android:id="@+id/action_share" android:orderInCategory="8" android:title="@string/action_share" app:showAsAction="always"/>
    <item android:id="@+id/action_sync_now" android:orderInCategory="6" android:title="@string/action_sync_now" app:showAsAction="never"/>
</menu>
