<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
    <RelativeLayout android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/image_view_google_fit" android:layout_width="match_parent" android:layout_height="@dimen/google_fit_config_image_view_height" android:layout_marginLeft="50dp" android:layout_marginTop="@dimen/google_fit_config_image_view_margin_top" android:layout_marginRight="50dp" android:src="@drawable/ic_nt_gf_graphic" android:layout_alignParentTop="true"/>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textSize="@dimen/google_fit_config_title_text_size" android:textColor="@color/white" android:gravity="center_horizontal" android:id="@+id/text_view_google_fit_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/google_fit_config_title_margin_left" android:layout_marginTop="@dimen/google_fit_config_title_margin_top" android:layout_marginRight="@dimen/google_fit_config_title_margin_right" android:text="@string/google_fit_choose_data" android:layout_below="@+id/image_view_google_fit" android:layout_centerHorizontal="true" style="@style/TextLight"/>
        <ScrollView android:id="@+id/scrollView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/google_fit_config_scroll_view_margin_left" android:layout_marginTop="@dimen/google_fit_config_scroll_view_margin_top" android:layout_marginRight="@dimen/google_fit_config_scroll_view_margin_right" android:layout_above="@+id/button_google_fit" android:layout_below="@+id/text_view_google_fit_title" android:layout_centerHorizontal="true">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
                <android.support.v7.widget.SwitchCompat android:textSize="@dimen/google_fit_config_switch_text_size" android:textColor="@color/white" android:layout_gravity="left" android:id="@+id/switch_time" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/google_fit_config_switch_first_margin_top" android:checked="true" android:text="@string/google_fit_config_switch_workout_time" style="@style/TextLight"/>
                <android.support.v7.widget.SwitchCompat android:textSize="@dimen/google_fit_config_switch_text_size" android:textColor="@color/white" android:layout_gravity="left" android:id="@+id/switch_calories" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/google_fit_config_switch_general_margin_top" android:checked="true" android:text="@string/google_fit_config_switch_calories_burned" style="@style/TextLight"/>
                <android.support.v7.widget.SwitchCompat android:textSize="@dimen/google_fit_config_switch_text_size" android:textColor="@color/white" android:layout_gravity="left" android:id="@+id/switch_avg_heart_rate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/google_fit_config_switch_general_margin_top" android:checked="true" android:text="@string/google_fit_config_switch_average_heart_rate" style="@style/TextLight"/>
                <android.support.v7.widget.SwitchCompat android:textSize="@dimen/google_fit_config_switch_text_size" android:textColor="@color/white" android:layout_gravity="left" android:id="@+id/switch_rpm" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/google_fit_config_switch_general_margin_top" android:checked="true" android:text="@string/google_fit_config_switch_average_rpm" style="@style/TextLight"/>
                <android.support.v7.widget.SwitchCompat android:textSize="@dimen/google_fit_config_switch_text_size" android:textColor="@color/white" android:layout_gravity="left" android:id="@+id/switch_distance" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/google_fit_config_switch_general_margin_top" android:checked="true" android:text="@string/google_fit_config_switch_distance" style="@style/TextLight"/>
            </LinearLayout>
        </ScrollView>
        <Button android:textSize="@dimen/google_fit_config_progress_button_text_size" android:textColor="@color/white" android:id="@+id/button_google_fit_desconnect" android:background="@color/google_fit_buttons_background" android:padding="@dimen/google_fit_config_progress_button_padding" android:layout_width="match_parent" android:layout_height="@dimen/google_fit_config_progress_button_height" android:layout_marginTop="@dimen/google_fit_config_progress_button_margin_top" android:text="@string/google_fit_button_disconnect" android:layout_alignParentBottom="true" android:textAllCaps="false" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" style="@style/TextLight"/>
        <com.dd.CircularProgressButton android:textSize="@dimen/google_fit_config_circular_progress_button_text_size" android:textColor="@color/white" android:id="@+id/button_google_fit_sync" android:background="@color/google_fit_buttons_background" android:layout_width="match_parent" android:layout_height="@dimen/google_fit_config_circular_progress_button_height" android:layout_alignParentBottom="true" android:textAllCaps="false" android:layout_alignParentStart="true" app:cpb_selectorIdle="@drawable/idle_state_selector" app:cpb_selectorComplete="@drawable/idle_state_selector" app:cpb_textComplete="@string/google_fit_sync_complete" app:cpb_textIdle="@string/google_fit_sync_data" app:cpb_textError="@string/google_fit_error" app:cpb_paddingProgress="@dimen/google_fit_config_circular_progress_button_padding_progress" style="@style/LatoLightBorderlessButtonStyle"/>
    </RelativeLayout>
</LinearLayout>
