<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
    <android.support.v4.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:background="@color/setting_title_row_background_color" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/settings_titles_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/settings_title_row_height" android:text="@string/settings_lbl_units" android:layout_marginStart="@dimen/settings_title_row_margin_start" style="@style/TextBold"/>
            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:id="@+id/linearLayout6" android:background="@drawable/bt_default_light_selector" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2" android:layout_weight="1">
                    <Spinner android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/spinnerUnits" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="match_parent" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_lbl_btn_google_fit" style="@style/TextLight"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout android:background="@color/setting_title_row_background_color" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/settings_titles_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/settings_title_row_height" android:text="@string/settings_lbl_link_services" android:layout_marginStart="@dimen/settings_title_row_margin_start" style="@style/TextBold"/>
            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:id="@+id/settings_btn_google_fit" android:background="@drawable/bt_default_light_selector" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2" android:layout_weight="1">
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_lbl_btn_google_fit" style="@style/TextLight"/>
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/blue_nautilus" android:gravity="center_vertical" android:id="@+id/text_view_google_fit_status" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:layout_marginLeft="@dimen/settings_google_fit_connected_margin_left" android:text="@string/settings_lbl_google_fit_connected" style="@style/TextLight"/>
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:id="@+id/settings_btn_mfp" android:background="@drawable/bt_default_light_selector" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2" android:layout_weight="1">
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_lbl_btn_my_fit_pal" style="@style/TextLight"/>
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/blue_nautilus" android:gravity="center_vertical" android:id="@+id/text_view_mfp_status" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:layout_marginLeft="@dimen/settings_google_fit_connected_margin_left" android:text="@string/mfp_is_connected" style="@style/TextLight"/>
                </LinearLayout>
            </RelativeLayout>
            <View android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <LinearLayout android:id="@+id/settings_btn_under_armour" android:background="@drawable/bt_default_light_selector" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2" android:layout_weight="1">
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:text="@string/under_armour_settings_title" style="@style/TextLight"/>
                    <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/blue_nautilus" android:gravity="center_vertical" android:id="@+id/text_view_under_armour_status" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:layout_marginLeft="@dimen/settings_google_fit_connected_margin_left" android:text="@string/mfp_is_connected" style="@style/TextLight"/>
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout android:background="@color/setting_title_row_background_color" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/settings_titles_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/settings_title_row_height" android:text="@string/settings_lbl_settings_feedback_support" android:layout_marginStart="@dimen/settings_title_row_margin_start" style="@style/TextBold"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/settings_email_us" android:background="@drawable/bt_default_light_selector" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="2" android:layout_weight="1">
                <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="wrap_content" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_lbl_settings_email_us" style="@style/TextLight"/>
            </LinearLayout>
            <LinearLayout android:background="@color/setting_title_row_background_color" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/settings_titles_text_size" android:textColor="@color/setting_title_text_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/settings_title_row_height" android:text="@string/settings_lbl_about" android:layout_marginStart="@dimen/settings_title_row_margin_start" style="@style/TextBold"/>
            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent" android:layout_height="@dimen/settings_value_row_height">
                <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:paddingLeft="@dimen/settings_general_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings_lbl_version" android:layout_centerVertical="true" style="@style/TextLight"/>
                <TextView android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:id="@+id/text_view_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.0(1)" android:layout_centerVertical="true" android:layout_marginEnd="@dimen/settings_general_margin_end" android:layout_alignParentEnd="true" style="@style/TextLight"/>
            </RelativeLayout>
            <View android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
            <Button android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/settings_btn_privacyPolicy" android:background="@drawable/bt_default_light_selector" android:paddingLeft="@dimen/settings_general_padding_left" android:paddingRight="@dimen/settings_general_padding_right" android:layout_width="match_parent" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_btn_privacy_policy" android:textAllCaps="false" style="@style/LatoLightBorderlessButtonStyle"/>
            <View android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
            <Button android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/settings_btn_eula" android:background="@drawable/bt_default_light_selector" android:paddingLeft="@dimen/settings_general_padding_left" android:paddingRight="@dimen/settings_general_padding_right" android:layout_width="match_parent" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_btn_eula" android:textAllCaps="false" style="@style/LatoLightBorderlessButtonStyle"/>
            <View android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
            <Button android:textSize="@dimen/settings_values_text_size" android:textColor="@color/white" android:gravity="left|center_vertical|center_horizontal|center|start" android:id="@+id/settings_btn_attributions" android:background="@drawable/bt_default_light_selector" android:paddingLeft="@dimen/settings_general_padding_left" android:paddingRight="@dimen/settings_general_padding_right" android:layout_width="match_parent" android:layout_height="@dimen/settings_value_row_height" android:text="@string/settings_btn_attributions" android:textAllCaps="false" style="@style/LatoLightBorderlessButtonStyle"/>
            <TextView android:background="@color/setting_divider_color" android:layout_width="match_parent" android:layout_height="@dimen/settings_divider_line_height"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
