<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" android:minHeight="?attr/actionBarSize" android:layout_alignParentLeft="true" android:layout_alignParentTop="true">
        <TextView android:layout_gravity="left" android:id="@+id/toolbar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/AppTheme.Toolbar.Title"/>
    </android.support.v7.widget.Toolbar>
    <Button android:textSize="@dimen/mfp_buttons_text_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_connect_to_myfitnesspal" android:background="@color/blue_nautilus" android:layout_width="match_parent" android:layout_height="@dimen/mfp_buttons_height" android:text="@string/ok" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="connectToMyFitnessPal" style="@style/LatoLightBorderlessButtonStyle"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/mfp_container_margin_top" android:layout_above="@+id/btn_connect_to_myfitnesspal" android:layout_below="@+id/toolbar" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
        <TextView android:textSize="@dimen/mfp_title_text_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mfp_sync_with" style="@style/TextLight"/>
        <TextView android:textSize="@dimen/mfp_title_text_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mfp_my_fitness_pal" style="@style/TextLight"/>
        <TextView android:textSize="@dimen/mfp_description_text_size" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/mfp_description_side_margin" android:layout_marginTop="@dimen/mfp_description_top_margin" android:layout_marginRight="@dimen/mfp_description_side_margin" android:text="@string/mfp_description" style="@style/TextLight"/>
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/mfp_img_top_margin" android:src="@drawable/ic_nt_mfp_graphic"/>
    </LinearLayout>
</RelativeLayout>
